feat: Add favorite color to night theme
This commit introduces a new color resource named `favorite` with the value `#BC8D04` to the `colors.xml` file for the night theme.

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -13,11 +13,13 @@
     <color name="searchBarBackground">#181818</color>
     <color name="searchBarBorder">#262626</color>
 
-    <color name="error">#FF0000</color>
-    <color name="success">#00FF00</color>
-
     <color name="selfSearch">#E68E5C1F</color>
     <color name="delete">#350000</color>
+
+    <color name="favorite">#BC8D04</color>
+
+    <color name="error">#FF0000</color>
+    <color name="success">#00FF00</color>
 
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
