--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -103,18 +103,6 @@
                             android:padding="0dp"
                             android:contentDescription="@string/settings" />
 
-                        <!-- אייקון רשימת מוצרים אישית -->
-                        <ImageView
-                            android:id="@+id/customListIcon"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/outline_lists"
-                            android:layout_centerVertical="true"
-                            android:layout_toStartOf="@id/shopIcon"
-                            android:layout_marginEnd="16dp"
-                            android:background="?attr/selectableItemBackgroundBorderless"
-                            android:padding="0dp"
-                            android:contentDescription="@string/custom_list_icon" />
                         <ImageView
                             android:id="@+id/shopIcon"
                             android:layout_width="wrap_content"
@@ -126,6 +114,21 @@
                             android:background="?attr/selectableItemBackgroundBorderless"
                             android:padding="0dp"
                             android:contentDescription="@string/shopping_bag_icon" />
+
+                        <!-- אייקון רשימת מוצרים אישית -->
+                        <ImageView
+                            android:id="@+id/customListIcon"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/outline_bookmarks"
+                            android:layout_centerVertical="true"
+                            android:layout_toStartOf="@id/shopIcon"
+                            android:layout_marginEnd="16dp"
+                            android:background="?attr/selectableItemBackgroundBorderless"
+                            android:padding="0dp"
+                            android:contentDescription="@string/custom_list_icon"
+                            app:tint="@color/primaryText" />
+
                     </RelativeLayout>
 
                     <!-- בחירת תאריך -->
