--- a/app/src/main/res/layout/main_screen.xml
+++ b/app/src/main/res/layout/main_screen.xml
@@ -1,6 +1,7 @@
 <!-- main_screen.xml -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -89,7 +90,8 @@
                             android:textStyle="bold"
                             android:textColor="@color/primaryText"
                             android:layout_centerVertical="true"
-                            android:layout_alignParentStart="true" />
+                            android:layout_alignParentStart="true"
+                            tools:ignore="RelativeOverlap" />
 
                         <!-- אייקון הגדרות -->
                         <ImageView
