--- a/app/src/main/res/layout/bottom_menu_v2.xml
+++ b/app/src/main/res/layout/bottom_menu_v2.xml
@@ -14,8 +14,7 @@
         android:layout_height="wrap_content"
         android:paddingTop="8dp">
 
-        <!-- The SearchView acts as a background for the buttons -->
-        <android.widget.SearchView
+        <View
             android:id="@+id/mainSearchView"
             android:layout_width="0dp"
             android:layout_height="50dp"
@@ -23,94 +22,113 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="12dp"
             android:background="@drawable/search_background"
-            android:contextClickable="true"
             android:elevation="4dp"
-            android:padding="12dp"
-            android:queryHint="@string/type_product"
-            android:textColor="@color/primaryText"
-            android:textColorHint="@color/secondaryText"
-            android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <!-- Container for catalog/add/search buttons, aligned to the far right -->
-        <LinearLayout
+        <ImageView
+            android:id="@+id/search_icon_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:elevation="5dp"
+            android:src="@drawable/ic_baseline_search"
+            app:layout_constraintBottom_toBottomOf="@id/mainSearchView"
+            app:layout_constraintStart_toStartOf="@id/mainSearchView"
+            app:layout_constraintTop_toTopOf="@id/mainSearchView"
+            app:tint="@color/secondaryText"
+            tools:ignore="ContentDescription" />
+
+        <TextView
+            android:id="@+id/searchTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="10dp"
+            android:elevation="5dp"
+            android:text="@string/type_product"
+            android:textColor="@color/secondaryText"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="@id/mainSearchView"
+            app:layout_constraintEnd_toStartOf="@id/barcodeIcon"
+            app:layout_constraintStart_toEndOf="@id/search_icon_image"
+            app:layout_constraintTop_toTopOf="@id/mainSearchView" />
+
+           <LinearLayout
             android:id="@+id/btnContainer"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
+            android:orientation="horizontal"
+            android:paddingEnd="4dp"
             android:elevation="12dp"
             android:gravity="center"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="@id/mainSearchView"
             app:layout_constraintEnd_toEndOf="@id/mainSearchView"
-            app:layout_constraintTop_toTopOf="@id/mainSearchView">
+            app:layout_constraintTop_toTopOf="@id/mainSearchView"
+            tools:ignore="RtlSymmetry">
 
             <ImageView
                 android:id="@+id/catalogBtn"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
-                android:background="@drawable/circle_background_button"
-                android:backgroundTint="@color/tertiary"
                 android:contentDescription="@string/catalog_icon"
                 android:padding="9dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/outline_menu_book"
                 android:visibility="visible"
-                app:tint="@color/white" />
+                app:tint="@color/tertiary" />
 
             <ImageView
                 android:id="@+id/selfAddBtn"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:layout_gravity="center"
-                android:background="@drawable/circle_background_button"
-                android:backgroundTint="@color/purple"
                 android:contentDescription="@string/add_self_calorie_value"
                 android:padding="9dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/baseline_add_white"
-                android:visibility="gone" />
+                android:visibility="gone"
+                app:tint="@color/purple"/>
 
             <ImageView
                 android:id="@+id/selfSearchBtn"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:layout_gravity="center"
-                android:background="@drawable/circle_background_button"
-                android:backgroundTint="@color/selfSearch"
                 android:contentDescription="@string/move_to_custom_product_view"
                 android:padding="9dp"
                 android:scaleType="fitCenter"
                 android:src="@drawable/ic_baseline_search"
-                android:visibility="gone" />
+                android:visibility="gone"
+                app:tint="@color/selfSearch" />
 
         </LinearLayout>
 
-        <!-- Separator line, to the left of the button container -->
-        <View
+           <View
             android:id="@+id/separator"
             android:layout_width="1dp"
             android:layout_height="0dp"
             android:layout_marginVertical="8dp"
             android:background="@color/tertiaryText"
-            android:elevation="5dp"
+            android:elevation="4dp"
             app:layout_constraintBottom_toBottomOf="@id/mainSearchView"
             app:layout_constraintEnd_toStartOf="@id/btnContainer"
             app:layout_constraintTop_toTopOf="@id/mainSearchView" />
 
-        <!-- Barcode button, to the left of the separator -->
-        <ImageButton
+    <ImageButton
             android:id="@+id/barcodeIcon"
-            android:layout_width="50dp"
-            android:layout_height="0dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="10dp"
             android:background="@android:color/transparent"
             android:contentDescription="@string/scan_barcode"
             android:elevation="8dp"
             android:src="@drawable/outline_barcode_scanner"
-            app:tint="@color/primaryText"
+            app:tint="@color/secondaryText"
             app:layout_constraintBottom_toBottomOf="@id/mainSearchView"
             app:layout_constraintEnd_toStartOf="@id/separator"
             app:layout_constraintTop_toTopOf="@id/mainSearchView" />
