refactor: Rename IDs in bottom_menu.xml for clarity
This commit renames several widget IDs in the `bottom_menu.xml` layout file to improve clarity and consistency.

The following changes were made:
*   `btnContainer` is renamed to `buttonsContainer`.
*   `selfAddBtn` is renamed to `selfAddIcon`.
*   `selfSearchBtn` is renamed to `selfSearchIcon`.

--- a/app/src/main/res/layout/bottom_menu.xml
+++ b/app/src/main/res/layout/bottom_menu.xml
@@ -17,7 +17,7 @@
             android:id="@+id/searchRl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_toStartOf="@+id/btnContainer">
+            android:layout_toStartOf="@+id/buttonsContainer">
 
 
         <android.widget.SearchView
@@ -49,7 +49,7 @@
         </RelativeLayout>
 
         <LinearLayout
-            android:id="@+id/btnContainer"
+            android:id="@+id/buttonsContainer"
             android:layout_alignParentEnd="true"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -58,7 +58,7 @@
             android:layout_marginBottom="12dp">
 
             <ImageView
-                android:id="@+id/selfAddBtn"
+                android:id="@+id/selfAddIcon"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:layout_gravity="center"
@@ -71,7 +71,7 @@
                 android:visibility="gone" />
 
             <ImageView
-                android:id="@+id/selfSearchBtn"
+                android:id="@+id/selfSearchIcon"
                 android:layout_width="45dp"
                 android:layout_height="45dp"
                 android:layout_gravity="center"
