refactor: Rename `bottom_menu.xml` to `bottom_search_menu.xml`
This commit renames the `bottom_menu.xml` layout file to `bottom_search_menu.xml` for better clarity and updates the include tag in `activity_main.xml` to reflect this change.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,6 @@
         android:src="@drawable/ic_baseline_arrow_circle_right_blue" />
 
     <!-- תפריט חיפוש תחתון + סריקת ברקוד -->
-    <include layout="@layout/bottom_menu" />
+    <include layout="@layout/bottom_search_menu" />
 
 </RelativeLayout>
