--- a/app/src/main/res/layout/bottom_search_menu.xml
+++ b/app/src/main/res/layout/bottom_search_menu.xml
@@ -40,15 +40,17 @@
             app:tint="@color/secondaryText"
             tools:ignore="ContentDescription" />
 
-        <TextView
+        <EditText
             android:id="@+id/searchTextView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="12dp"
             android:layout_marginEnd="10dp"
             android:elevation="5dp"
-            android:text="@string/type_product"
-            android:textColor="@color/secondaryText"
+            android:hint="@string/type_product"
+            android:textColorHint="@color/secondaryText"
+            android:textColor="@color/primaryText"
+            android:background="@null"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="@id/mainSearchView"
             app:layout_constraintEnd_toStartOf="@id/barcodeIcon"
@@ -71,8 +73,8 @@
 
             <ImageView
                 android:id="@+id/catalogIcon"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:contentDescription="@string/catalog_icon"
                 android:padding="9dp"
@@ -83,8 +85,8 @@
 
             <ImageView
                 android:id="@+id/selfAddIcon"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:contentDescription="@string/add_self_calorie_value"
                 android:padding="9dp"
@@ -95,8 +97,8 @@
 
             <ImageView
                 android:id="@+id/selfSearchIcon"
-                android:layout_width="45dp"
-                android:layout_height="45dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:contentDescription="@string/move_to_custom_product_view"
                 android:padding="9dp"
