feat: Update tint color for measure icon
This commit changes the tint color of the measure icon in the `product_item.xml` layout from `@color/favorite` to `@color/star`.

--- a/app/src/main/res/layout/product_item.xml
+++ b/app/src/main/res/layout/product_item.xml
@@ -32,7 +32,7 @@
         android:contentDescription="@string/measure"
         android:scaleType="fitCenter"
         android:layout_marginEnd="4dp"
-        app:tint="@color/favorite" />
+        app:tint="@color/star" />
 
     <ImageView
         android:id="@+id/bookmarkIcon"
